# spiralviz

./: .gitignore  CMakeLists.txt  README.md
include/spiralviz/: app.hpp  fftstreamer.hpp  pch.hpp
include/spiralviz/audio/: recorder.hpp
include/spiralviz/dsp/: util.hpp  windowedfft.hpp  windowfuncs.hpp
include/spiralviz/gui/: audioinput.hpp  fftdebug.hpp  noterender.hpp  pianohighlights.hpp  util.hpp  vizshader.hpp  vizutil.hpp
src/: app.cpp  fftstreamer.cpp  main.cpp
src/audio/: recorder.cpp
src/dsp/: windowedfft.cpp  windowfuncs.cpp
src/gui/: audioinput.cpp  fftdebug.cpp  noterender.cpp  pianohighlights.cpp  util.cpp  vizshader.cpp  vizutil.cpp
workdir/: viz.frag.glsl  viz.vert.glsl
